Simple cases done

--- a/ast1.ipynb
+++ b/ast1.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "### Goal\n",
     "\n",
-    "In this project, we will try to build a transpiler from Python syntax into Latex. This would support converting simple expression such as (`x**2 + 1` -> $x^2 +1$). The expression would be valid Python expression. \n",
+    "In this project, we will try to build a transpiler from Python syntax into Latex. This would support converting simple expression such as (`x**2 + 1` -> $x^2 +1$). The expression would be valid Python expression. We would parse the the Python expression into an AST. From this AST, we would convert the operator from the Python version into Latex (such as `**` -> ^). Then we would also display the Latex expression in Jupyter for demonstration purposes. \n",
     "\n",
     "Some examples:\n"
    ]
@@ -62,35 +62,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "operator = Add | Sub | Mult | Div | Mod | Pow \n",
-    "    cmpop = Eq | NotEq | Lt | LtE | Gt | GtE | Is | IsNot | In | NotIn\n"
+    "# operator = Add | Sub | Mult | Div | Mod | Pow \n",
+    "# cmpop = Eq | NotEq | Lt | LtE | Gt | GtE | Is | IsNot | In | NotIn\n",
+    "# expr = BoolOp(boolop op, expr* values)\n",
+    "#          | BinOp(expr left, operator op, expr right)\n",
+    "#          | Compare(expr left, cmpop* ops, expr* comparators)\n",
+    "#          | Num(object n) -- a number as a PyObject.\n",
+    "#          | Name(identifier id, expr_context ctx)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BNF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "\\textit{CompareOperator} & ::= &  \\texttt{==} \\\\ \n",
+    "& | & \\texttt{!=} \\\\ \n",
+    "& | & \\texttt{<} \\\\  \n",
+    "& | & \\texttt{<=} \\\\ \n",
+    "& | & \\texttt{>} \\\\  \n",
+    "& | & \\texttt{>=} \\\\\n",
+    "\\textit{BinaryOperator} & ::= & \\texttt{+}  \\\\\n",
+    "& | & \\texttt{-}  \\\\\n",
+    "& | & \\texttt{*}  \\\\\n",
+    "& | & \\texttt{/}  \\\\\n",
+    "& | & \\texttt{**}  \\\\\n",
+    "\\textit{Expression} & ::= & < \\textit{Expression} > < \\textit{BinaryOperator}> < \\textit{Expression} > \\\\\n",
+    "& | & < \\textit{Expression} > <\\textit{CompareOperator}> <\\textit{Expression}> \\\\\n",
+    "& | & < \\textit{Number} > \\\\\n",
+    "& | & < \\textit{Name} > \\\\\n",
+    "\\textit{Number} & ::= & \\texttt{int}\\\\\n",
+    "& | & \\texttt{float}\\\\\n",
+    "\\textit{Name} & ::= & \\texttt{str}\\\\\n",
+    "\\end{eqnarray*}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OP_MAP = {\n",
+    "    ast.Add : \"+\",\n",
+    "    ast.Sub: \"-\",\n",
+    "    ast.Mult: \"\\\\cdot\", # This is due to preference\n",
+    "    ast.Pow : \"^\",\n",
+    "    ast.Div: None, # Special case implemented below\n",
+    "    ast.Eq: \"=\",\n",
+    "    ast.NotEq: \"\\\\neq\",\n",
+    "    ast.Lt: \"<\",\n",
+    "    ast.Gt: \">\",\n",
+    "    ast.LtE: \"\\\\leq\" ,\n",
+    "    ast.GtE: \"\\\\geq\",\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Syntax check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Latexifiable(ast.NodeVisitor):\n",
+    "    OP_MAP = OP_MAP\n",
+    "    \n",
+    "    def visit_Module(self, node):\n",
+    "        return all(map(self.visit, node.body))\n",
+    "    \n",
+    "    def visit_Expr(self, node):\n",
+    "        return self.visit(node.value)  \n",
+    "    \n",
+    "    def visit_Name(self, node):\n",
+    "\n",
+    "        return True\n",
+    "    \n",
+    "    def visit_Num(self, node):\n",
+    "        return True\n",
+    "    \n",
+    "    def visit_BinOp(self, node):\n",
+    "        l = self.visit(node.left)\n",
+    "        r = self.visit(node.right)\n",
+    "        op = type(node.op)\n",
+    "        return all(\n",
+    "            [op in set(self.OP_MAP.keys()),\n",
+    "            l,r]\n",
+    "        )\n",
+    "        \n",
+    "    def visit_Compare(self, node):\n",
+    "        l = self.visit(node.left)\n",
+    "        r = self.visit(node.comparators[0])\n",
+    "        op = type(node.ops[0])\n",
+    "        return all(\n",
+    "            [op in set(self.OP_MAP.keys()),\n",
+    "            l,r]\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Transpiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Latexify(ast.NodeVisitor):\n",
-    "    OP_MAP = {\n",
-    "        ast.Add : \"+\",\n",
-    "        ast.Sub: \"-\",\n",
-    "        ast.Mult: \"\\\\cdot\", # This is due to preference\n",
-    "        ast.Pow : \"^\",\n",
-    "        ast.Div: None, # Special case\n",
-    "        ast.Eq: \"=\",\n",
-    "        ast.NotEq: \"\\\\neq\",\n",
-    "        ast.Lt: \"<\",\n",
-    "        ast.Gt: \">\",\n",
-    "        ast.LtE: \"\\\\leq\" ,\n",
-    "        ast.GtE: \"\\\\geq\",\n",
-    "        \n",
-    "    }\n",
+    "    OP_MAP = OP_MAP\n",
     "    \n",
     "    def visit_Module(self, node):\n",
     "        return list(map(self.visit, node.body))\n",
@@ -132,28 +236,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_parsed(v):\n",
+    "    \"\"\"\n",
+    "    Display the converted LaTeX formula in Jupyter\n",
+    "    \n",
+    "    :param v: The Python expression to convert into Latex\n",
+    "    \"\"\"\n",
     "    p = ast.parse(v)\n",
     "    r = Latexify().visit(p)\n",
-    "    print(r[0])\n",
+    "    lfb = Latexifiable().visit(p)\n",
+    "    print(f\"Is Latexifiable?: {lfb}\")\n",
+    "    print(f\"Latex: {r[0]}\")\n",
     "    if len(r) > 0:\n",
     "        return Latex(f\"${r[0]}$\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\n"
+      "Is Latexifiable?: True\n",
+      "Latex: x\n"
      ]
     },
     {
@@ -165,7 +277,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,14 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ x } + { 1 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { x } + { 1 }\n"
      ]
     },
     {
@@ -195,7 +308,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,14 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ x } ^ { 2 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { x } ^ { 2 }\n"
      ]
     },
     {
@@ -225,7 +339,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,14 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ { { x } ^ { 2 } } + { x } } + { 1 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { { { x } ^ { 2 } } + { x } } + { 1 }\n"
      ]
     },
     {
@@ -255,7 +370,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,14 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ { { 3 } \\cdot { x } } + { x } } - { 1 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { { { 3 } \\cdot { x } } + { x } } - { 1 }\n"
      ]
     },
     {
@@ -285,7 +401,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,14 +412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\frac{1}{x}\n"
+      "Is Latexifiable?: True\n",
+      "Latex: \\frac{1}{x}\n"
      ]
     },
     {
@@ -315,7 +432,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,14 +443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\frac{{ x } ^ { 2 }}{{ { { x } ^ { 2 } } + { x } } - { 1 }}\n"
+      "Is Latexifiable?: True\n",
+      "Latex: \\frac{{ x } ^ { 2 }}{{ { { x } ^ { 2 } } + { x } } - { 1 }}\n"
      ]
     },
     {
@@ -345,7 +463,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,14 +474,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ x } = { 1 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { x } = { 1 }\n"
      ]
     },
     {
@@ -375,7 +494,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,14 +505,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ { x } + { 2 } } < { 3 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { { x } + { 2 } } < { 3 }\n"
      ]
     },
     {
@@ -405,7 +525,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,14 +536,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ { x } + { 2 } } \\geq { 3 }\n"
+      "Is Latexifiable?: True\n",
+      "Latex: { { x } + { 2 } } \\geq { 3 }\n"
      ]
     },
     {
@@ -435,7 +556,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
