--- a/ast1.ipynb
+++ b/ast1.ipynb
@@ -275,6 +275,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -658,6 +665,13 @@
    "metadata": {},
    "source": [
     "# Scratch work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A library called `showast` can be install to draw the AST of any Python expression. "
    ]
   },
   {
