--- a/ast_project1.ipynb
+++ b/ast_project1.ipynb
@@ -54,7 +54,8 @@
     "|`x == 1` | $x = 1$|\n",
     "| ` x< 1` | $x < 1$|\n",
     "|`sum(x)`|$\\sum { x } $|\n",
-    "|`sum(3*x)`|$\\sum { 3 \\cdot x}  $|\n"
+    "|`sum(3*x)`|$\\sum { 3 \\cdot x}  $|\n",
+    "| `a and b` | $ a \\land b$ |\n"
    ]
   },
   {
@@ -103,8 +104,11 @@
     "& | & \\texttt{*}  \\\\\n",
     "& | & \\texttt{/}  \\\\\n",
     "& | & \\texttt{**}  \\\\\n",
+    "\\textit{BooleanOperator} & ::= & \\texttt{and}  \\\\\n",
+    "& | & \\texttt{or}  \\\\\n",
     "\\textit{Expression} & ::= & < \\textit{Expression} > < \\textit{BinaryOperator}> < \\textit{Expression} > \\\\\n",
     "& | & < \\textit{Expression} > <\\textit{CompareOperator}> <\\textit{Expression}> \\\\\n",
+    "& | & < \\textit{Expression} > <\\textit{BooleanOperator}> <\\textit{Expression}> \\\\\n",
     "& | & < \\textit{Number} > \\\\\n",
     "& | & < \\textit{Name} > \\\\\n",
     "& | & < Call > \n",
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +139,8 @@
     "    ast.Gt: \">\",\n",
     "    ast.LtE: \"\\\\leq\" ,\n",
     "    ast.GtE: \"\\\\geq\",\n",
-    "\n",
+    "    ast.And: \"\\\\land\",\n",
+    "    ast.Or: \"\\\\lor\",\n",
     "}"
    ]
   },
@@ -148,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +181,11 @@
     "            [op in set(self.OP_MAP.keys()),\n",
     "            l,r]\n",
     "        )\n",
-    "        \n",
+    "    def visit_BoolOp(self, node):\n",
+    "        vs = map(self.visit, node.values)\n",
+    "        op = self.OP_MAP.get(type(node.op))\n",
+    "\n",
+    "        return all([op, *vs])\n",
     "    def visit_Compare(self, node):\n",
     "        l = self.visit(node.left)\n",
     "        r = self.visit(node.comparators[0])\n",
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +244,15 @@
     "\n",
     "        return f\"{{ {l} }} {op} {{ {r} }}\" # Who knows that escaping braces in Python f-string is more braces\n",
     "    \n",
+    "    def visit_BoolOp(self, node):\n",
+    "        vs = map(self.visit, node.values)\n",
+    "        op = self.OP_MAP.get(type(node.op))\n",
+    "        \n",
+    "        if not op:\n",
+    "            raise ValueError(\"Can't find supported operator\")\n",
+    "\n",
+    "        return f\" {op} \".join([f\"{{ {v} }}\" for v in vs])\n",
+    "    \n",
     "    def visit_Compare(self, node):\n",
     "        l = self.visit(node.left)\n",
     "        r = self.visit(node.comparators[0])\n",
@@ -255,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +321,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +352,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +383,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +414,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +445,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +476,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +507,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +538,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +569,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +600,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +631,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +662,7 @@
        "<IPython.core.display.Latex object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,10 +673,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is Latexifiable?: True\n",
+      "Latex: { { a } \\land { b } } \\lor { { c } \\land { d } }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "${ { a } \\land { b } } \\lor { { c } \\land { d } }$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_parsed(\"a and b or c and d\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -986,6 +1028,33 @@
    "source": [
     "ast.dump(ast.parse(\"sum(x)\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Module(body=[Expr(value=BoolOp(op=And(), values=[Name(id='y', ctx=Load()), Name(id='y', ctx=Load())]))])\""
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ast.dump(ast.parse(\"y and y\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
