--- a/ast_project1.ipynb
+++ b/ast_project1.ipynb
@@ -111,7 +111,7 @@
     "& | & < \\textit{Expression} > <\\textit{BooleanOperator}> <\\textit{Expression}> \\\\\n",
     "& | & < \\textit{Number} > \\\\\n",
     "& | & < \\textit{Name} > \\\\\n",
-    "& | & < Call > \n",
+    "& | & < Call >\\\\\n",
     "\\textit{Number} & ::= & \\texttt{int}\\\\\n",
     "& | & \\texttt{float}\\\\\n",
     "\\textit{Name} & ::= & \\texttt{str}\\\\\n",
